[gd_scene load_steps=4 format=2]

[ext_resource path="res://server/diffusion_servers.gd" type="Script" id=1]
[ext_resource path="res://server/downloader.gd" type="Script" id=2]
[ext_resource path="res://server/server_interface.gd" type="Script" id=3]

[node name="DiffusionServers" type="Node"]
script = ExtResource( 1 )

[node name="Downloader" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ServerInterface" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TimerProbe" type="Timer" parent="ServerInterface"]
wait_time = 0.4

[connection signal="server_check_succeeded" from="ServerInterface" to="." method="_on_ServerInterface_server_check_succeeded"]
[connection signal="timeout" from="ServerInterface/TimerProbe" to="ServerInterface" method="_on_Timer_timeout"]
